# iqdb-ivf

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: ivf_bench.rs
dev/: DIRECTIVES.md  ROADMAP.md
docs/: API.md
docs/release/: v0.1.0.md  v1.0.0.md
examples/: filtered_search.rs  ivf_pq.rs  probe_tuning.rs  quick_start.rs  recall_oracle.rs  retrain.rs
src/: assign.rs  config.rs  index.rs  lib.rs  pq_variant.rs  rng.rs  search.rs  stats.rs  topk.rs  train.rs
tests/: config_validation.rs  delete_basic.rs  dotproduct_negation.rs  filter_correctness.rs  ivf_flat_correctness.rs  ivf_pq_build_and_search.rs  ivf_pq_determinism.rs  ivf_pq_dotproduct_sign.rs  ivf_pq_recall.rs  probe_tuning.rs  proptest_invariants.rs  recall_at_scale.rs  retrain_basic.rs  sample_smaller_than_clusters.rs  train_determinism.rs  untrained_state.rs
