# ██████╗ ███████╗██████╗ ███████╗
# ██╔══██╗██╔════╝██╔══██╗██╔════╝
# ██████╔╝█████╗  ██████╔╝███████╗
# ██╔══██╗██╔══╝  ██╔═══╝ ╚════██║
# ██║  ██║███████╗██║     ███████║
# ╚═╝  ╚═╝╚══════╝╚═╝     ╚══════╝
#╔═══════════════════════════════╗
#║ Rust Efficiency & Performance ║
#╚═══════════════════════════════╝
[package]
name    = "iqdb-ivf"
version = "1.0.0"

# Minimum Supported Rust Version (MSRV)
rust-version = "1.87"
edition = "2024"

# License
license = "Apache-2.0 OR MIT"

# Readme
readme = "README.md"

# Description
description = "IVF clustered nearest-neighbor index for very large vector datasets - part of the iQDB family."

# Keywords (5 max)
keywords = [
    "ivf",
    "vector-search",
    "nearest-neighbor",
    "clustering",
    "iqdb"
]

# Categories
categories = [
    "algorithms",
    "data-structures"
]

# Links
homepage      = "https://github.com/jamesgober/iqdb-ivf"
repository    = "https://github.com/jamesgober/iqdb-ivf"
documentation = "https://docs.rs/iqdb-ivf"

# Authors
authors = [
    "James Gober <me@jamesgober.com>",
    "Matt Callahan <matthewcallahan01@icloud.com>"
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lib]
name = "iqdb_ivf"
path = "src/lib.rs"


# DEPENDENCIES
# #################################
[dependencies]
# Shared iQDB vocabulary: VectorId, Metadata, Hit, SearchParams, DistanceMetric, IqdbError.
iqdb-types    = "1.0.0"
# Centroid + candidate distance kernels (SIMD where the target allows it).
iqdb-distance = "1.0.0"
# The Index / IndexCore traits this crate implements.
iqdb-index    = "1.0.0"
# Metadata pre-filter evaluation (closed-world semantics, validated depth/IN caps).
iqdb-filter   = "1.0.0"
# Product quantization for the IVF-PQ variant: codebook training, encoding,
# and the `PqAdcTables` query-side ADC primitive.
iqdb-quantize = "1.0.0"
# `ForgeError` trait: `kind()` / `caption()` on `IqdbError` for structured
# error-event fields on the tracing instrumentation boundary.
error-forge   = "1.0.0"
# Tracing facade only. Instrumented at the insert/delete/search boundary;
# the per-entry scan stays free of any tracing call.
tracing       = { version = "0.1", default-features = false, features = ["attributes", "std"] }


# DEV DEPENDENCIES
# #################################
[dev-dependencies]
# FlatIndex is the exact-search recall oracle for the correctness tests.
iqdb-flat = "1.0.0"
criterion = { version = "0.5", features = ["html_reports"] }
proptest  = "1"


# BENCHMARKS
# #################################
[[bench]]
name    = "ivf_bench"
harness = false


# RELEASE PROFILE
# #################################
[profile.release]
opt-level     = 3
lto           = "fat"
codegen-units = 1
panic         = "abort"
strip         = "symbols"
